--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
     <section id="Education_S"> <app-main-eductaions></app-main-eductaions> </section>
     <section id="certificado_S"><app-certificados></app-certificados></section>
     <section id="job_S"><app-jobs></app-jobs></section>
+    <section id="Proyectos"><app-proyectos></app-proyectos></section>
      <section id="Footer_S">  <app-contactanos></app-contactanos> </section>
