--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -45,9 +45,9 @@
 	  </p>
 	  <div class="hero_contact">
 		
-		<button class="hero_btn">Download CV</button>
+		<button class="hero_btn"><a href="https://drive.google.com/file/d/1GDgIQ5gX9sDXPV1jdF5jEB6Tbn_i5T_F/view?usp=sharing" target="_blank" class="descaragrbtn">Download CV</a></button>
 	
-	  </div>
+	  </div> 
 	</div>
 
 	<figure class="hero_picture">
