--- a/src/app/certificados/certificados.component.css
+++ b/src/app/certificados/certificados.component.css
@@ -4,7 +4,7 @@
     gap: 1.5rem;
     align-items: center;
     text-align: left;
-    background-color: #5C70E0;
+    background-color: #232949;
     padding: 0px 20px;
 }
 
@@ -35,12 +35,12 @@
     grid-auto-rows: 150px;
     grid-auto-flow: dense;
     grid-gap: 10px;
-    background-color: #5C70E0;
+    background-color: #232949;
 }
 
 .grid-gallery .grid-item{
     position: relative;
-    background-color: #5C70E0;
+    background-color: #232949;
     overflow: hidden;
 }
 
