--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -1,9 +1,9 @@
+<div class="mainPro">
 <div class="PYT">
-    <h1 class="title">Proyectos</h1>
+    <h1 class="title">Projects</h1>
 </div>
 <div class="proyectosAll">
-
-    <div class="card">
+   <div class="card">
         <div class="imgBx IMG1"> </div>
             <div class="content">
                 <span class="price">
@@ -16,8 +16,8 @@
                 </ul>
                 <button class="button-62" role="button"><a href="https://quatumcodearauz.netlify.app/" target="_blank">Go</a></button>
             </div>
-            
-    </div>
+        </div>
+    
 
     <div class="card">
         <div class="imgBx IMG2"> </div>
@@ -80,4 +80,5 @@
             </div>
     </div>
 
+</div>
 </div>
