--- a/src/app/proyectos/proyectos.component.css
+++ b/src/app/proyectos/proyectos.component.css
@@ -13,6 +13,7 @@
    font-size: 2.5rem;   
    color: #232949;
    line-height: 1.5;
+   margin-left: 27px
 }
 
 
@@ -28,6 +29,8 @@ body{
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     padding: 20px;
     gap: 15px;
+    row-gap: 45px;
+   
 }
 
 .card   {
@@ -208,3 +211,6 @@ box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
     text-decoration: none;
     color: #fff;
   }
+
+  
+ 
