se agrega padding

--- a/src/app/jobs/jobs.component.css
+++ b/src/app/jobs/jobs.component.css
@@ -112,7 +112,9 @@
         max-width:none;
     }
     .hero_copy , .hero_title{
-      padding-left: 10px;
+      padding-left: 15px;
+      padding-right: 15px;
+
     }
     
     }
