--- a/src/app/main-eductaions/main-eductaions.component.css
+++ b/src/app/main-eductaions/main-eductaions.component.css
@@ -107,7 +107,8 @@
     max-width: none;
   }
   .hero_copy , .hero_title{
-    padding-left: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 
   .timeLine{
