Se agrego caracteristicas a los puestos de trabajo

--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -26,9 +26,19 @@
             <p class="timeline__paragraph">
                First Quatum Minerals. 
             </p>
-            <p class="timeline__paragraph">
+            <!--<p class="timeline__paragraph">
                 Analizar, mantener, verificar y desarrollar reportes en PowerBI 
-             </p>
+
+             </p>-->
+             <ul class="timeline__paragraph">
+                <li>Requirements gathering for report development.</li>
+                <li>Data connections and extraction.</li>
+                <li>Data processing and modeling</li>
+                <li>Report server administration.</li>
+                <li>Creation and maintenance of reports in Power BI
+                    and Report Builder</li>
+
+              </ul>  
         </div>
     
         <div class="Timeline_Componet timeline__component--bottom Timeline__Component__bg">
@@ -37,9 +47,19 @@
              <p class="timeline__paragraph">
                 Caja de ahorros
              </p>
-             <p class="timeline__paragraph">
+             <ul class="timeline__paragraph">
+                <li>Requirement gathering for process automation.</li>
+                <li>Verifying project scope and determining
+                    estimated production release times.</li>
+                <li>Verifying and managing development licenses.</li>
+                <li>Report server administration.</li>
+                <li>Creation and maintenance of bots in Automation
+                    Anywhere.</li>
+
+              </ul>
+             <!--<p class="timeline__paragraph">
                 Automatizar procesos bancarios con Automation Anywhere.
-             </p>
+             </p>-->
          </div>
     
          <div class="timeline__middle">
@@ -66,9 +86,20 @@
             <p class="timeline__paragraph">
                Caja de ahorros
             </p>
-            <p class="timeline__paragraph">
+            <!--<p class="timeline__paragraph">
                 Automatizar procesos bancarios con Microsoft power platforms.
-             </p>
+             </p>-->
+             <ul class="timeline__paragraph">
+                <li>Analyze different banking workflows.</li>
+                <li>Identify potential processes to streamline
+                    administrative tasks or have a direct impact on
+                    customers.</li>
+                <li>Building and maintaining applications using
+                    Power Automate and Power Apps.</li>
+                <li>Support development teams outsourced by
+                    project management.</li>
+
+              </ul>
         </div>
 
 
@@ -80,9 +111,14 @@
              <p class="timeline__paragraph">
                 Caja de ahorros
              </p>
-             <p class="timeline__paragraph">
+            <!--<p class="timeline__paragraph">
                 Verificar cheques, crear y actualizar perfil de clientes
-             </p>
+             </p>-->
+             <ul class="timeline__paragraph">
+                <li>Verify checks, create, and update bank clients'
+                    profiles.
+                    </li>
+             </ul>
          </div>
     
          <div class="timeline__middle">
