--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -31,7 +31,7 @@
                     <li>MongoDB</li>
                     <li>Nodejs</li>
                 </ul>
-                <button class="button-62 DesactiveBTN" role="button"><a href="#">Go</a></button>
+                <button class="button-62" role="button"><a href="https://arauzprojectpowerapps.netlify.app/" target="_blank">Go</a></button>
             </div>
     </div>
 
